tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_10.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let bar = | Null -> Integer =>
  let x = "hello"
  x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_10.kk:3:3
  │
3 │   x
  │   ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
